k8s/plex/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plex
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
