k8s/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  selector:
    app: plex
  ports:
  - name: plex-web
    port: 32400
    targetPort: 32400
    protocol: TCP
  - name: roku
    port: 8324
    targetPort: 8324
    protocol: TCP
  - name: dlna-tcp
    port: 32469
    targetPort: 32469
    protocol: TCP
  - name: dlna-udp
    port: 1900
    targetPort: 1900
    protocol: UDP
  - name: discovery
    port: 5353
    targetPort: 5353
    protocol: UDP
  - name: gdm-1
    port: 32410
    targetPort: 32410
    protocol: UDP
  - name: gdm-2
    port: 32412
    targetPort: 32412
    protocol: UDP
  - name: gdm-3
    port: 32413
    targetPort: 32413
    protocol: UDP
  - name: gdm-4
    port: 32414
    targetPort: 32414
    protocol: UDP
  type: ClusterIP
